# stellar-security-guide

./: .gitignore  CONTRIBUTING.md  GUIDE.es.md  GUIDE.md  LICENSE  README.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: claude-review.yml  scout-audit.yml
ansible/: harden-stellar-node.yml  inventory.ini
docker/: .env.example  Caddyfile  docker-compose.yml  prometheus.yml
examples/: README.md
examples/fixed-vault/: Cargo.toml
examples/fixed-vault/src/: lib.rs
examples/vulnerable-vault/: Cargo.toml
examples/vulnerable-vault/src/: lib.rs
skills/soroban-common-mistakes/: LICENSE  README.md  SKILL.md
skills/soroban-common-mistakes/references/: checklist.md
