[package]
name = "fixed-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# FIX #22: exact version pinned — replace with the version you audited against
soroban-sdk = { version = "=21.7.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
# FIX #8: overflow protection enabled in release builds
overflow-checks = true
