[package]
name = "vulnerable-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# BUG #22: floating version — pin to an exact version for production
soroban-sdk = { version = "21", features = ["testutils"] }

[profile.release]
opt-level = "z"
# BUG #8: overflow-checks omitted — defaults to false in release builds.
# Add: overflow-checks = true
